--- a/css/templatemo-digital-trend.css
+++ b/css/templatemo-digital-trend.css
@@ -1,13 +1,13 @@
 /*
 
-DIGITAL TREND
+Jolin's website
 
-https://templatemo.com/tm-538-digital-trend
+https://zycui-1961565.github.io/myFunSite.html
 
 */
   
   @font-face {
-      font-family: 'Plain-Regular';
+      font-family: 'Arial';
       src: url('../fonts/Plain-Regular.woff2') format('woff2'),
           url('../fonts/Plain-Regular.woff') format('woff');
       font-weight: normal;
@@ -31,14 +31,14 @@ https://templatemo.com/tm-538-digital-trend
   }
 
   :root {
-    --primary-color:        #057a8d;
-    --secondary-color:      #f1c111;
+    --primary-color:        #8d0539;
+    --secondary-color:      #f1a311;
     --white-color:          #ffffff;
-    --dark-color:           #171819;
-    --project-bg:           #f0f8ff;
-    --menu-bg:              #0c8195;
+    --dark-color:           #cdd9e6;
+    --project-bg:           #f1f1cc;
+    --menu-bg:              #ceb7ca;
 
-    --title-color:          #15141a;
+    --title-color:          #2c05ee;
     --gray-color:           #909090;
     --link-color:           #404040;
     --p-color:              #666262;
@@ -48,19 +48,19 @@ https://templatemo.com/tm-538-digital-trend
     --font-bold-family:     'Plain-Bold', sans-serif;
     --font-weight-bold:     bold;
 
-    --h1-font-size:         42px;
+    --h1-font-size:         60px;
     --h2-font-size:         32px;
     --h3-font-size:         24px;
-    --p-font-size:          18px;
-    --base-font-size:       16px;
-    --menu-font-size:       14px;
+    --p-font-size:          20px;
+    --base-font-size:       60px;
+    --menu-font-size:       35px;
 
     --border-radius-large:  100px;
     --border-radius-small:  5px;
   }
 
   body {
-    background: var(--white-color);
+    background: var(--Yellow-color);
     font-family: var(--base-font-family);
   }
 
@@ -128,6 +128,7 @@ https://templatemo.com/tm-538-digital-trend
     font-size: 14em;
     line-height: 0;
     opacity: 0.10;
+    padding: 15px
   }
 
   blockquote {
@@ -206,7 +207,7 @@ https://templatemo.com/tm-538-digital-trend
     padding: 8em 0;
   }
   .section-padding-half {
-    padding: 4em 0;
+    padding: 10em 0;
   }
 
   .google-map iframe {
@@ -220,120 +221,101 @@ https://templatemo.com/tm-538-digital-trend
     MENU             
   -----------------------------------------*/
 
-  .navbar {
-    background: var(--menu-bg);
-    z-index: 2;
-    top: 0;
-    right: 0;
-    left: 0;
-    padding: 1.5em;
-  }
-
-  .navbar-brand {
-    color: var(--white-color);
-    font-size: var(--h2-font-size);
-  }
-
-  .nav-link {
-    color: var(--white-color);
-    font-size: var(--menu-font-size);
-    letter-spacing: 0.4px;
-    margin: 0 1.6em;
-    padding: 0.6em;
-  }
-
-  .nav-link.active,
-  .nav-link:hover {
-    color: var(--secondary-color);
-  }
-
-  .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 0;
-    padding-left: 0;
-  }
-
-  .navbar-expand-lg .navbar-nav .nav-link.contact {
-    border: 2px solid var(--secondary-color);
-    border-radius: var(--border-radius-large);
-    color: var(--secondary-color);
-    font-family: var(--font-bold-family);
-    padding: 0.6em 2em 0.8em 2em;
-  }
-
-  .navbar-expand-lg .navbar-nav .nav-link.contact:hover,
-  .navbar-expand-lg .navbar-nav .nav-link.contact.active {
-    background: var(--secondary-color);
-    color: var(--white-color);
-  }
-
-  .navbar-nav .navbar-toggler-icon {
-    background: none;
-  }
-
-  .navbar-toggler {
-    border: 0;
-    padding: 0;
-    cursor: pointer;
-    margin: 0 10px 0 0;
-    width: 30px;
-    height: 35px;
-    outline: none;
-  }
-
-  .navbar-toggler:focus {
-    outline: none;
-  }
-
-  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
-    background: transparent;
-  }
-
-  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon::before,
-  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon::after {
-    transition: top 300ms 50ms ease, -webkit-transform 300ms 350ms ease;
-    transition: top 300ms 50ms ease, transform 300ms 350ms ease;
-    transition: top 300ms 50ms ease, transform 300ms 350ms ease, -webkit-transform 300ms 350ms ease;
-    top: 0;
-  }
-
-  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon::before {
-    transform: rotate(45deg);
-  }
-
-  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon::after {
-    transform: rotate(-45deg);
-  }
-
-  .navbar-toggler .navbar-toggler-icon {
-    background: var(--white-color);
-    transition: background 10ms 300ms ease;
-    display: block;
-    width: 30px;
-    height: 2px;
+  .nav-bar {
     position: relative;
-  }
+    padding: 20px 0;
+    transition: .3s;
+}
 
-  .navbar-toggler .navbar-toggler-icon::before,
-  .navbar-toggler .navbar-toggler-icon::after {
-    transition: top 300ms 350ms ease, -webkit-transform 300ms 50ms ease;
-    transition: top 300ms 350ms ease, transform 300ms 50ms ease;
-    transition: top 300ms 350ms ease, transform 300ms 50ms ease, -webkit-transform 300ms 50ms ease;
-    position: absolute;
-    right: 0;
-    left: 0;
-    background: var(--white-color);
-    width: 30px;
-    height: 2px;
-    content: '';
-  }
+.nav-bar.nav-sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 10px 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
+    z-index: 999;
+}
 
-  .navbar-toggler .navbar-toggler-icon::before {
-    top: -8px;
-  }
+.nav-bar .navbar {
+    height: 100%;
+    padding: 0;
+}
 
-  .navbar-toggler .navbar-toggler-icon::after {
-    top: 8px;
-  }
+.navbar-dark .navbar-nav .nav-link,
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link.active {
+    padding: 10px 10px 8px 10px;
+    color: #ffffff;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link.active {
+    color: #aa9166;
+    transition: none;
+}
+
+.nav-bar .dropdown-menu {
+    margin-top: 0;
+    border: 0;
+    border-radius: 0;
+    background: #f8f9fa;
+}
+
+.nav-bar .btn {
+    color: #ffffff;
+    border: 2px solid #aa9166;
+    border-radius: 0;
+}
+
+.nav-bar .btn:hover {
+    background: #aa9166;
+}
+
+@media (min-width: 992px) {
+    .nav-bar {
+        padding: 20px 60px;
+    }
+    
+    .nav-bar.nav-sticky {
+        padding: 10px 60px;
+    }
+    
+    .nav-bar,
+    .nav-bar .navbar {
+        background: #121518 !important;
+    }
+    
+    .nav-bar .navbar-brand {
+        display: none;
+    }
+    
+    .nav-bar a.nav-link {
+        padding: 8px 15px;
+        font-size: 15px;
+        text-transform: uppercase;
+    }
+}
+
+@media (max-width: 991.98px) {   
+    .nav-bar,
+    .nav-bar .navbar {
+        padding: 3px 0;
+        background: #121518 !important;
+    }
+    
+    .nav-bar a.nav-link {
+        padding: 5px;
+    }
+    
+    .nav-bar .dropdown-menu {
+        box-shadow: none;
+    }
+    
+    .nav-bar .btn {
+        display: none;
+    }
+}
 
 
 
@@ -415,21 +397,117 @@ https://templatemo.com/tm-538-digital-trend
     padding-left: 5px;
   }
 
-  .owl-theme .owl-dots .owl-dot {
-    outline: none;
-  }
+  .blog {
+    position: relative;
+    width: 100%;
+    padding: 45px 0;
+}
 
-  .owl-theme .owl-dots .owl-dot span {
-    background: var(--gray-color);
-    width: 50px;
-    height: 3px;
-    margin:  35px 5px;
-  }
+.blog .blog-carousel {
+    position: relative;
+    width: calc(100% + 30px);
+    left: -15px;
+    right: -15px;
+}
 
-  .owl-theme .owl-dots .owl-dot.active span, 
-  .owl-theme .owl-dots .owl-dot:hover span {
-    background: var(--secondary-color);
-  }
+.blog .blog-item {
+    position: relative;
+    margin: 0 15px;
+    background: #ffffff;
+    overflow: hidden;
+}
+
+.blog .blog-page .blog-item {
+    margin: 0 0 30px 0;
+}
+
+.blog .blog-item img {
+    width: 100%;
+    margin-bottom: 25px;
+}
+
+.blog .blog-item h3 {
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.blog .blog-item .meta {
+    padding: 0 0 15px 0;
+}
+
+.blog .blog-item .meta * {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    color: #999999;
+}
+
+.blog .blog-item .meta i {
+    margin: 0 2px 0 10px;
+}
+
+.blog .blog-item .meta i:first-child {
+    margin-left: 0;
+}
+
+.blog .blog-item p {
+    font-size: 16px;
+}
+
+.blog .blog-item a.btn {
+    padding: 0;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #aa9166;
+    transition: .3s;
+}
+
+.blog .blog-item a.btn i {
+    margin-left: 10px;
+}
+
+.blog .blog-item a.btn:hover {
+    color: #121518;
+}
+
+.blog .owl-nav,
+.blog .owl-dots {
+    margin-top: 15px;
+    text-align: center;
+}
+
+.blog .owl-dot {
+    display: inline-block;
+    margin: 0 5px;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: #aa9166;
+}
+
+.blog .owl-dot.active {
+    background: #121518;
+}
+
+.blog .pagination .page-link {
+    color: #121518;
+    border-radius: 0;
+    border-color: #aa9166;
+}
+
+.blog .pagination .page-link:hover,
+.blog .pagination .page-item.active .page-link {
+    color: #121518;
+    background: #aa9166;
+}
+
+.blog .pagination .disabled .page-link {
+    color: #999999;
+}
+
 
   .list-detail {
     margin-left: 1em;
@@ -460,8 +538,8 @@ https://templatemo.com/tm-538-digital-trend
   }
 
   .client-info img {
-    width: 100px;
-    margin-right: 1em;
+    width: 200px;
+    margin-right: 9em;
   }
 
 
@@ -507,7 +585,7 @@ https://templatemo.com/tm-538-digital-trend
   }
 
   .blog-header-info h3 {
-    max-width: 80%;
+    max-width: 90%;
   }
 
   .blog-header-info a {
@@ -534,29 +612,100 @@ https://templatemo.com/tm-538-digital-trend
      CONTACT              
   -----------------------------------------*/
 
-  .newsletter-form .form-control,
-  .contact-form .form-control {
-    box-shadow: none;
-    background: var(--project-bg);
-    border: 0;
-    padding: 1.7em 1.3em;
-    margin: 14px 0;
-  }
+  .contact {
+    position: relative;
+    width: 100%;
+    padding: 45px 0 15px 0;
+}
 
-  .newsletter-form button,
-  .contact-form #submit-button {
-    background: var(--primary-color);
-    border-radius: var(--border-radius-large);
-    color: var(--white-color);
-    cursor: pointer;
-    font-size: var(--p-font-size);
-    line-height: 0px;
-    padding: 1.5em 1.3em;
-  }
+.contact .contact-info {
+    position: relative;
+    margin-bottom: 30px;
+    width: 100%;
+    padding: 30px;
+    background: #121518;
+}
 
-  .newsletter-form button {
-    background: var(--secondary-color);
-  }
+.contact .contact-item {
+    position: relative;
+    margin-bottom: 30px;
+    padding: 30px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+    border: 2px solid #aa9166;
+}
+
+.contact .contact-item i {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    color: #aa9166;
+    border: 2px solid #aa9166;
+}
+
+.contact .contact-text {
+    position: relative;
+    width: auto;
+    padding-left: 15px;
+}
+
+.contact .contact-text h2 {
+    color: #aa9166;
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.contact .contact-text p {
+    margin: 0;
+    color: #999999;
+    font-size: 16px;
+}
+
+.contact .contact-item:last-child {
+    margin-bottom: 0;
+}
+
+.contact .contact-form {
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.contact .contact-form input {
+    height: 60px;
+    border-radius: 0;
+    border-width: 2px;
+    border-color: #121518;
+}
+
+.contact .contact-form textarea {
+    height: 190px;
+    border-radius: 0;
+    border-width: 2px;
+    border-color: #121518;
+}
+
+.contact .contact-form .btn {
+    padding: 16px 35px;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #aa9166;
+    background: #121518;
+    border: 2px solid #aa9166;
+    border-radius: 0;
+    transition: .3s;
+}
+
+.contact .contact-form .btn:hover {
+    color: #121518;
+    background: #aa9166;
+}
 
 
 
